# Guess-the-Card

./: README.md  game.py  pyproject.toml
.github/workflows/: python-publish.yml
github/workflows/: publish-pypi.yml  update-release.yml
src/GuessTheDuck.DuckyBoi_XD/: __init__.py  game.py
src/Guess_The_Duck_Duckyboi_XD.egg-info/: PKG-INFO  SOURCES.txt
src/guess_the_duck/: __init__.py  game.py
src/guess_the_duck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/guess_the_duck/legacy/: __init__.py  game.py  legacy_source_game.py
